Fix header overlapping page

--- a/front-end/src/Header.css
+++ b/front-end/src/Header.css
@@ -1,16 +1,12 @@
 header.Header-header {
     display: flex;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
-    width: 98%;
 
-    background: white;
-    border-style: solid;
-    border-color: black;
-    border-width: 1%;
+    background: #ccc;
     font-size: 1em;
-    padding: 1%;
+    padding: 4%;
 
     flex-direction: row;
     justify-content: center;
