--- a/front-end/src/Sidebar.css
+++ b/front-end/src/Sidebar.css
@@ -17,62 +17,65 @@
     background: #a90000;
 }
   
-  /* Position and sizing of clickable cross button */
-  .bm-cross-button {
-    height: 24px;
-    width: 24px;
-  }
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 50px;
+  width: 50px;
+}
   
-  /* Color/shape of close button cross */
-  .bm-cross {
-    background: #bdc3c7;
-  }
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+  height: 50px;
+  width: 50px;
+}
   
-  /*
-  Sidebar wrapper styles
-  Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
-  */
-  .bm-menu-wrap {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-  }
+/*
+Sidebar wrapper styles
+Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+*/
+.bm-menu-wrap {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+}
   
-  /* General sidebar styles */
-  .bm-menu {
-    background: #373a47;
-    padding: 2.5em 1.5em 0;
-    font-size: 1.15em;
-  }
+/* General sidebar styles */
+.bm-menu {
+  background: #373a47;
+  padding-left: 4em;
+  font-size: 1.15em;
+}
   
-  /* Morph shape necessary with bubble or elastic */
-  .bm-morph-shape {
-    fill: #373a47;
-  }
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
   
-  /* Wrapper for item list */
-  .bm-item-list {
-    color: #b8b7ad;
-    padding: 0;
-  }
+/* Wrapper for item list */
+.bm-item-list {
+  position: fixed;
+  color: #b8b7ad;
+}
   
-  /* Individual item */
-  .bm-item {
-    display: inline-block;
-  }
+/* Individual item */
+.bm-item {
+  display: inline-block;
+}
   
-  /* Styling of overlay */
-  .bm-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.3);
-  }
+/* Styling of overlay */
+.bm-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+}
 
 a {
   text-decoration: none;
-  color: black;
+  color: white;
   font-size: 2em;
   align-content: center;
   justify-content: center;
